Fix buttons spacing in editor and frontend to close #151

--- a/src/scss/blocks/core/button/_common.scss
+++ b/src/scss/blocks/core/button/_common.scss
@@ -40,6 +40,12 @@ $enable-button-block-styles:            true !default;
         align-items: center;
         flex-wrap: wrap;
 
+        &:first-child {
+            --block-top-spacing: 1;
+            @include element-spacing;
+        }
+
+
         .wp-block,
         .wp-block-button {
             margin-right: var(--element-spacing);
